# grade

./: .gitignore  README.md  alembic.ini  pyproject.toml
app/: celery_app.py  config.py  database.py  logger.py  main.py  models.py  schemas.py  secret.py  sitemap.py
app/auth/: router.py  schemas.py  services.py
app/books/: routers.py  schemas.py
app/migrations/: env.py
app/migrations/versions/: 13cdb3f2d173_.py  78545d7b79be_.py  dafc7a7aeb35_.py
app/scripts/: add_books.py
app/static/js/: hogan.js  script.js
app/templates/: base.html  books.html  detail.html
docker/: .env.example  dctl.sh  docker-compose.yml
docker/containers/pgsql/: Dockerfile
docker/containers/python/: Dockerfile
locale/en-US/: message.json
locale/ru-RU/: message.json
